--- a/_posts/2018-10-24-292-gsjrx01.md
+++ b/_posts/2018-10-24-292-gsjrx01.md
@@ -11,103 +11,319 @@ tags: [公司金融学]
 
 # CHAPTER 1: 资本视角下的公司运营
 
-企业的三种组织形式： 独资企业、合伙企业、公司企业（有限责任公司、股份公司）
 
-公司企业是公司金融研究的出发点。
+本周开始我们将更新由清华大学经济管理学员陈晋蓉教授主讲的公司金融模块课程。
+第一讲课程为导论性课程，主要帮助同学们厘清公司的定义，进而解析当前公司融资难的问题所在，提出资本视角下公司应当关注和学习的资本战略管理模型。后续课程中，陈教授将对该模型中各子模型及内在关联进行详解。
+以下为第一讲课程笔记。
 
-公司企业的特点：
- 
-1. 公司企业是企业组织形式的一种
-2. 公司企业是独立法人，享有相应的法律权利
-3. 拥有向社会募集资金的权利
-4. 拥有双重纳税责任
+![](/uploads/2018/10/24-40.png)
 
-公司是商品，融资投资（一买一卖）构成了公司金融的两条主线。
+一、正本清源，重新认识公司
+我想从公司融资难，开始这个课程，融资是公司金融里非常重要的话题。在中国，尤其中小企业、创业型企业，融资难是一个很现实的问题。
+首先要从我们企业自身来考虑问题。我先问大家一个问题——
+企业和公司的区别是什么？
 
-两个市场：商品市场、资本市场
+1. 企业的类型。
+企业是我们为了经营活动、为了取得利润而形成的一个组织。作为企业，有三种类型：
+第一种类型：独资企业。
+第二种类型：合伙企业。
+第三种类型：公司企业。
+今天我们讲的公司金融，显然指公司企业。公司企业又有限责任公司和股份公司之分。
 
-企业的五类投资人：
+![](/uploads/2018/10/24-41.png)
 
-1. 股东，股东为企业提供股本
-2. 债权人，债权人给予公司贷款，或者为公司提供存货物资和设备。
-3. 客户，产品销售给客户，客户为企业提供资金。
-4. 利益合作者，上下游合作者（供应商/经销商）提供经营性融资。
-5. 政府，政府提供资金、政策（如税收政策）等
+换一个角度，从概念、范畴来讲，公司应该是我们企业的组织形式中的一种。公司企业与独资、合伙企业不一样的是什么呢？
 
-正本清源，重新认识公司
+公司企业是一个独立的法人，享有相应的法律权利，也要承担法律责任。当然，相应的也是最重要的，公司企业有向社会募集资金的权利。
 
-定位一，资本视角下，公司是商品。资本市场使公司商品化。买卖股票就是买卖公司所有权的行为。
+所以，在人数上，比如说股份制的公司就没有人的限制，可以发行股票，可以向社会公开来募集资金。
 
-定位二，跳出企业看企业。要站在投资人的角度思考公司如何经营。
+同时，作为公司制的企业，具有双重纳税责任。作为公司，要交与公司相关的税收。同时，我们作为它的股东，在分红的时候，也要交个人所得税。所以，大家注意公司企业是要双重纳税的，这一点跟合伙企业就不一样了。
 
-公司融资的六大挑战：
+![](/uploads/2018/10/24-42.png)
 
-商品市场->商品交易->商品价值->产业战略
-资本市场->公司交易->公司价值->资本战略
+由此，首先界定今天我们讲的话题，我们讲的是公司金融，不是所有企业都包含在内的。
 
+2.公司是什么？
+
+进一步，既然我们讲公司金融，我问大家第二个问题，公司是什么？
+今天我们这门课程是金融课，要讲资本。站在资本的角度，公司是什么？
+公司是商品。
+
+大家注意，我这是帮大家厘清大家对公司的定位，对公司的认知。
+
+第一个定位，首先大家经营公司要有一个定位，即公司是商品。更严谨地来讲，资本市场使公司商品化了。
+
+作为股份公司，所有权的表现是我们的股票。你持有的份额是股份，当我们买卖股票的时候，本质上在买卖公司的所有权。所以，上市、融资是一个卖公司的过程。而收购、兼并是买公司的过程。一买一卖，融资投资，构成了公司金融的两条主线。
+
+![](/uploads/2018/10/24-43.png)
+
+
+所以，简单来讲、通俗来讲，公司是商品。大家注意，这既是一种理论，更是一种理念。为什么？我在底下跟大家聊天的时候，经常有同学讲：公司，我把它当孩子在养。大家想，当你把公司当孩子养的时候，不能买卖。如果你过不了这道槛，你就解决不了融资难的问题。
+
+我们要解决融资难这件事情，就意味着我们要在两个市场上做企业，
+第一个市场，商品市场，这是大家非常熟悉的。
+第二个市场，资本市场，这个可能大家不那么熟悉。
+
+所以，从定位上来讲，通过第一个定位“公司是商品”，我要强调，你做一家企业，你就要在商品市场和资本市场上做企业。
+
+由此会带来第二个定位，仍然提一个问题，作为公司，公司的资金、公司的钱都是从哪儿来的？ 我们首先要知道从哪儿找钱去，谁的口袋里有钱。大家算算，平常我们去找钱、融资，都从谁的口袋里去找？
+
+肯定先想银行，银行借钱给我们，这是一种负债的行为。但是，你们凭什么能负债？先得有本钱。
+
+第一个给大家提供资金的是股东，股东给我们提供了最初的本钱（股本）.由此可以去负债。也就是资金还可以从债权人这里来，这是第二个来源。
+
+我们拿了钱，投了机器、设备，开始生产，把产品卖给客户，从而客户也可以给我们提供资金，这是第三个来源。
+
+还有供应商、经销商，我们企业的财务帐上有应付账款、预收账款，这是经营性融资，是你的上下游，也就是利益合作伙伴，这是第四个来源。
+
+还有谁可以给我们提供资本？政府，这是第五个来源。其实政府不仅仅是提供资金，还给我们提供了很多的资源和政策。比如税收政策，现在基于美国的减税，我们也在降税。其实，这也是一种资金的提供。
+
+![](/uploads/2018/10/24-44.png)
+
+我们归纳一下。可以给企业提供资金的，不仅仅是借贷。股东、债权人、客户、利益合作者、政府。我们可以把他们打一个包，叫做“投资人”，这是一个广义的投资人。
+
+有的同学讲，我的企业太小了，找政府去行不行？其实行不行跟大小无关，而是跟大家的理念有关。大家感受一下，这五类投资人在给一个公司投资之前，是不是都站在公司的外边？是不是只有投资了，才跟我们企业发生了关系。
+
+我要讲的第二个定位，简单来讲叫做“跳出企业做企业”，跳出你的公司来做这个公司。什么意思？如果我每一天就闷头想怎么赚钱、怎么讲利润，没有抬头看路，没有整合外部投资人的资源，那是没有投资人愿意给你投资的。
+
+![](/uploads/2018/10/24-45.png)
+
+所以，我们要跳出公司，站在投资人的角度，来思考一下我们这个公司应该怎么做、怎么经营。大家想，如果我们做的这个公司符合投资人的要求，你有成长性，在未来能够给他带来收益，投资人肯定愿意给你投资。
+
+回过头来看，我们是两个市场做企业。我们要从只知道在商品市场讲利润的方式做企业，跳到资本市场上，站在投资人的角度思考如何做企业。
+
+所以，我们把两个定位强调一下。第一，公司在资本市场上就是一种商品。第二，我们要跳出公司到资本市场上来经营公司这个商品。我们只有从理念上做调整，才能够解决融资难的问题。
+
+二、公司融资的六大挑战
+我们要对比一下，资本市场上的商品（也就是我们的公司）和我们在商品市场上经营的商品之间有什么不同，经营的特征有什么不同，从而才能真正明确我们融资所面临的挑战是什么。
+
+我们在商品市场上做的是商品交易，资本市场上我们做的是公司交易。那么，我们把公司看作商品，作为资本市场上的一种商品，资本市场给大家提出了什么样的挑战？
 特征1：公司是非标商品
-
 挑战1：如何构架独有的企业文化。
+每一个企业和每一个企业长得不一样，公司和公司之间是不一样的。最表象的是公司所处的行业不同，公司的规模大小不同，外在的表现形式不一样。公司作为一种商品，在资本市场上的第一个特征就是公司是一种非标商品。
+
+而非标商品越非标、越独特就越有投资价值，物以稀为贵。那作为一个公司，最本质的区别和独特之处是什么呢？
+
+回到公司和企业的概念中，我们说公司和企业首先是一种组织，既然是组织，有一波人在公司里头。每一个公司，进入的人不同，追求不同，目标不同，所思所想不同。
+
+![](/uploads/2018/10/24-46.png)
+
+越想让我们的公司非标，就必须做好企业文化。其实每一个企业和每一个企业最根本不同的是什么？就是企业文化的不同。公司作为一种非标商品要在资本市场上有吸引力，有投资价值，就必须要足够稀缺和独特，这个挑战就是你如何构架独有的企业文化。
 
 特征2：三权分立才可以进行公司买卖
 
-所有权（股票）、决策权、经营权
-
 挑战2：如何确保公司的预期收益
+我们在商品市场上，我们制造产品或提供服务，都有一个完工的时点。这个产品制造完了，或者做一个工程，3年、10年，多长都有完工剪彩的那一天。
+
+大家想，如果我们把公司看作商品，能不能讲完工？不能。公司不能讲完工，从理论意义来讲，当我们一成立这个公司，我们就天天都在经营管理这个公司，天天都在制造它。那咱们什么时候能卖这个公司？或者说什么时候标志着这个公司是成熟的，是一个可以卖的商品了，有投资价值了呢？
+
+答案是当你的公司做到三权分立的时候。哪三权呢？所有权、决策权、经营权。这也是公司作为商品在资本市场上的第二个特征，即只有三权分立的公司才可以买卖。
+
+我们所有要上市的公司，事实上都进行了股改。股改的意义，不仅仅是把其他类型的企业变成了股份公司，而是在于做到了三权分立。
+
+为什么我们要做到三权分立，才可以买卖公司？
+
+举个例子，比如某位同学说了，我有一家公司，我自己出资、自己经营，自己当股东、当老板、当经营者。但是我现在想要改制上市。因为大家都是同学，所以我先卖一部分，让大家来认购。
+
+但是他现在还是三权合立，大家如果认购他的股份，意味着大家既买所有权，又买决策权和经营权。这个同学说：我那公司特别盈利，特别赚钱。大家愿意认购吗？不会愿意的。
+
+为什么？因为当三权合立的情况下，这位同学卖了自己的公司，那如果这位同学自己不经营了，换了别人经营。经营理念、战略、商业模式都可能会变，那这个公司还盈利吗？未来还盈利吗？不一定。因为市场并不以大家的想法为转移，也许你改变了创始人的做法以后，这家公司会更盈利，但也许就会亏损了。
+
+我们做投资，投的是什么？投公司的过去，还是公司的未来？所有投资人都投的是公司的预期收益，也就是公司的未来。
+
+所以，三权分立我只买卖所有权，也就是股票，只转让所有权，决策权、经营权不变，可以保证公司未来的预期可以实现。所以，三权分立确保这个企业是持续盈利的。证监会就有这样的规定，一个拟上市公司，董、监、高（董事、监事、高管）发生重大变化，要延迟3年才可以上市。
+
+例如，你的公司要上市了，结果你的总经理拉了一波人自己去创业了。投资人有理由怀疑新来的总经理，以及他的经营团队，改变战略、改变商业模式后，市场有可能欢迎这个改变，也有可能不欢迎这个改变。所以，我们要等3年，看一看他是不是还能够带回来利润。
+
+![](/uploads/2018/10/24-47.png)
+
+大家注意，三权分立的目的是为了确保企业是持续盈利的。也就是说，在商品市场上，我们讲的是预期收益，未来是不是盈利的。
+
+总的一句话就是，公司作为商品，带来的又一个挑战是你有没有预期收益。
 
 特征3：公司是可以拆着卖的
-
 挑战3：如何做好公司治理
 
-其实就是要权力制衡的顶层设计，也就是公司治理。
+我们买卖商品都是整体购买回去的，通常都是整体买回去。但是，公司作为商品是可以拆着卖的。可以买51%，100%，上市的要求也只是必须卖不低于25%的股份就可以了。
+
+所以大家注意这第三个特征，公司这个商品是可以拆着卖的，你不必全都卖出去。由此带来一个问题，我把股权转让了，卖掉了，还能控制这个公司吗？
+
+![](/uploads/2018/10/24-48.png)
+
+“万宝之争”（万科和宝能），大家还有没有印象？公司所有权和控制权是可以分离的，出资的不一定控制这个公司，控制公司的不一定是出资的。
+
+这一特征也就要求大家在商品市场上，要做好权利制衡的顶层设计，也就是公司治理。
+
+![](/uploads/2018/10/24-49.png)
+
+如果我的治理结构没有设计好，当我去融资的时候，有可能丧失对这个公司的控制权。而你天天把这个控制权握紧紧的，投资人也进不来。所以，由公司这个商品可以拆着卖的特征，带来的挑战是治理结构的问题。
 
 特征4：公司价值存在不确定性
-
 挑战4：未来收益的不确定性
 
-时点是华尔街的灵魂，不同时点，公司价值具有不确定性。
+大家生产的产品、提供的服务，要想成交，最关键的是价格。所有买商品的人，得觉得它特别值，接受你的价格才能成交。所以，我们讲商品得有价值。而公司要想成交、买卖，是不是也需要公司有价值？由此我们看到，公司值多少钱，这是一个问题。
 
+商品定价很容易，制造这个商品投入的料、工、费，再加上我们的预期利润，加成法就可以给商品定价了。
+
+那公司怎么定价？首先我们来考虑公司的价值具有什么样的特征？公司价值是一个定数吗？从成立公司那一天开始，实际上我们就在经营公司这个商品，它的价值天天都在变化，而且可以是上升的，还可以是下降的。今年是上升的，明年可能是下降的。也就是有一个特征，公司的价值具有不确定性。
+
+那我们如何给公司这种商品定价呢？我们可以人为的选一个时点，假定在这个时点之下，公司是不变的，公司不经营了，价值固定在这一点了。而公司的价值体现在所有经营者的心血、时间、金钱，大家投入的这些东西。当我们投入了心血、时间、金钱之后，这个企业的财务就会呈现出来有多少资产，有多少收入，有多少利润。根据资产利润的情况，选择一定的定价方法，在这个时点下，公司的价值就可以确定下来。
+
+首先公司价值具有不确定性，我们人为选择了一个时点，在这个时点下，来看公司的资产利润状态，采用一定的方法定价。不同时点下，公司的价值不一样。价值不同，价格不同；价格不同，大家的融资额就不一样。
+
+![](/uploads/2018/10/24-50.png)
+
+所以，有一句话“时点是华尔街的灵魂”。我们在整个公司金融中，时间是重要的。由于有了时点，我们就可以看未来，刚刚我说了，投资就是投未来。而未来可能是盈利的，也可能是亏损的。
+
+由此在经营上给大家带来的第四个挑战就是风险。在金融财务上，什么是风险？一个组织遇到的风险非常多，比如政治风险、市场风险等等。但是，在金融财务上风险是什么？专指一个公司未来收益的不确定性。
+
+![](/uploads/2018/10/24-51.png)
+
+我们卖公司，融资固然开心。投资人则一定要看未来的风险有多大。
 特征5：价值营销
-
 挑战5：会计报表
 
-特征6：要讲双向战略
+你们在商品市场上，卖商品的时候，有没有去吹吹牛？在商品市场上，要讲商品营销。资本市场上，公司的又一特征就是要讲价值营销。而且这种价值营销如果没有做好的话，公司这个商品是卖不出去的。
 
+价值营销的方法有很多，比如说路演、信息披露，都是让投资人来认识公司的投资价值。由此，带来第五个挑战，所有所有价值营销中最核心、最关键的要看你们公司有多少资产、有多少收入、有多少利润、有多少负债，我们得去看报表。我们非上市公司，每一年都要做年报。上市公司，月、季、半年、年度报表都要披露。
+
+![](/uploads/2018/10/24-52.png)
+
+银行给公司贷款，也要先拿报表来看。所以，我们要想做好价值营销，最核心、最关键的挑战是做好会计报表。
+
+特征6：要讲双向战略
 挑战6：需要创新商业模式
 
-运营管理三件事：
+第六个需要大家考虑的问题，是商品市场和资本市场如何协同？如何能既做好商品市场，又做好资本市场？
 
-1. 经营活动（挣钱）
-2. 投资活动（花钱）
-3. 融资活动（找钱）
+所以在商品市场上，我们要做强，讲的是产业战略。在资本市场上，要能够融得资金，支持公司的发展，这是什么？资本战略。
 
-经营活动三个重要的环节：供、产、销。
+当我们到资本市场上去投资、融资的时候，光讲我们的资本战略，讲怎么拿到钱，怎么骗到钱，怎么去包装。在资本市场上的投资人会是什么感觉？你真的是来吹牛来了。
 
-1. 供：一个企业有机器、设备、厂房、办公楼，构成了企业的长期资金。同时，企业有原材料、备品备件、低值易耗品，这是一个企业的储备资金。
-2. 产：生产加工、支付税费、发工资，这叫生产资金。
-3. 销：把产品卖出去，形成的是货币资金。
+所以，在资本市场上，公司的又一个特征是我们一定要讲双向战略。
 
-日常工作四大流：
+首先，你要讲清楚产业战略，如何发展这个产业，企业，解决前面所说的五大问题。怎么有预期、怎么防范风险、怎么更具投资价值、个性、核心竞争力，也就是在资本市场上，你首先要讲清楚你的产业战略。
 
-1. 业务流
-2. 物流
-3. 资本流
-4. 人力资源流
+然后，你再来讲基于这种产业战略，你需要的资金是多少、做什么用、未来的目标、达到的结果，这样投资人才会给你投资。
 
-供产销是企业的心脏；资本的转换、回收、再投入形成现金流，形成公司的血液。
+所以，在资本市场上，不能仅讲资本战略，一定讲的是双向战略。既然我们要讲的是双向战略，在不考虑资本的时候，只是在商品市场上来经营，我们很清楚自己的商业模式。但是，当我们把金融、资本加进去了，给大家带来的挑战是一个创新的商业模式，也就是要考虑产业+资本的模式。
 
-模型解释：
+![](/uploads/2018/10/24-53.png)
 
-从产业经营（运营管理）出发，形成内部资本的管理（财务管理），按照一定的会计政策编制报表（会计报表），把这些报表披露给外部投资人，投资人进行价值分析，来决定给你的投资（公司金融）。
+原来我们只考虑产业就OK了，今天必须把资本加进去，这是给大家提出来的第六个挑战。
+
+三、资本战略管理模型
+
+在前面讲的内容中，我们首先重新区别了公司和企业，给公司重新定位。接着讲了我们面临的是两个市场的挑战，分别是商品市场和资本市场。因此，我们需要一个基于资本市场和商品市场的战略规划。
+
+今天，我们不讲战略规划，我们讲的是金融。那在战略规划之下，我们就应该来看一看我们的资本战略。它是金融、财务、会计联动的资本战略。大家注意我们要讲的不仅仅是资本运营，而是整个企业基于资本市场，管理资本的战略。
+
+从资本角度看企业的经营，不分行业、不分大小，大家都在忙一个企业的运营管理的三件事：
+
+第一件事——经营活动。公司是以盈利为目的的组织。经营活动就是挣钱，这是大家忙的第一件事，&nbsp;
+
+第二件事——投资活动。要想盈利，要想挣钱，必须做第二件事，也就是花钱。
+
+第三件事——融资活动。要想经营，要向投资，必须做第三件事，也就是找钱。
+
+作为企业来讲，就是在忙经营活动（挣钱）、投资活动（花钱）、融资活动（找钱）这么一个过程，也是整个企业的金融决策过程。下面我们就对这个过程中进行一个细致的分析，从而归纳出我们的资本战略的管理模型。
+
+1. 财务管理
+1.1 现金流
+
+我们从大家最熟悉的运营管理出发。经营活动，主要包括供、产、销三个环节。我们看一下这些主要经营活动背后的资本。
+
+在供应阶段，一个企业有机器、设备、厂房、办公楼，构成了一个企业的长期资金。同时，企业有原材料、备品备件、低值易耗品，这是一个企业的储备资金。
+
+在生产阶段，生产加工、支付税费、发工资，这叫生产资金。
+
+在销售阶段，把产品卖出去，形成的是货币资金。
+
+![](/uploads/2018/10/24-54.png)
+
+所以，在整个运营管理中，企业会形成四大流。
+
+大家天天忙的各种日常工作是业务流，我们能够看到、数的清楚的是物流，大家看不见的是资本流，我们领导的是人力资源流。业务流、物流、资本流、人力资源流是企业的四大流。
+
+我们着重要看的是背后的资本流。举个例子，到年底了，财务一般算账是150亿收入减去100亿成本费用，有50亿利润。但是，从资本角度，先不要看利润，而应该看公司在2017年花掉多少钱，收回多少钱，又有多少钱可以用于再投入。
+
+从这样一个角度看资本流动的过程，我们就可以把供产销看作是一个企业的心脏。由心脏所引起的资本转换、回收、再投入，是一个企业的血脉。血脉里头流动的是一个公司的血液，就是现金流。这就是供产销的金融意义，让我们的资本动起来了。
+
+![](/uploads/2018/10/24-55.png)
+
+1.2资金链
+
+但是，这也产生了问题。投入、收回、再投入，循环不断进行，企业是不会快速长高长壮的。企业必须像人似的，要去吃饭，也就是融资。通过借来的债权融资、股权融资，拿到资金，再投入到企业里来。企业原来生产100吨，现在可以生产500吨，再投一次，再来一轮，更大了。
+
+利润是什么？利润是供产销经营活动这个心脏造出来的血液。利润有一部分会退出企业，用于分红、支付利息。比如说50亿的利润，分10亿，剩下的可以再进入企业。
+
+所以，大家注意，供产销经营活动也是融资行为，我们叫做内源性的融资，就是内部自己造的。通过外部来的融资，我们叫外源性的，例如股权和债权融资。
+
+大家一定注意，经营活动也是融资。一个企业一定有自己的经营活动，有造血的盈利机制，才能再从外边找资金。中国人讲“打铁还得自身硬”，这就是我说的双向战略，首先企业要讲清楚内源性的融资行为（供产销经营活动）这部分，你才能讲外源性的融资行为。
+
+综上，一个企业的资本流可以分两个部分，供产销经营活动构成的资本流就是我们的现金流。内源性融资（利润再投入）和外源性融资（债权/股权资融资）一起形成的资本流，就是企业的资金链。
+
+![](/uploads/2018/10/24-56.png)
+
+由此，通过运营管理，我们会形成对公司内部资本管理的过程，这就是财务管理，又可分成两个管理：现金流管理和资金链管理。一个企业如果财务管理水平很高，把现金、资金管好，可以提高运营的效率，利润会更好，这是一个提高的过程。大家要跟自己的现实经营结合到一起体会一下。
+
+2.会计报表
+每年年底和年初的时候，我特别忙的一件事就是参加各个公司的年会。大家开始总结，个人总结、公司总结。会计也要给大家总结，怎么总结？会计要按照一定的会计政策，给大家编制会计报表。
+
+![](/uploads/2018/10/24-57.png)
+
+怎么编的？我仍然建议大家对号入座。
+l  如果你是负责投资、融资的，你的经营行为就装到了资产负债表里头。
+l  如果你是管市场的、管研发的、管办公室的，就装到利润表里头。
+l  如果你是总经理，抓全面，应该最关注公司安不安全。最不安全的是你的血液出问题了，那就是现金流量表。
+对号入座，你在管什么，你的经营行为就装到哪张报表里去了。
+
+![](/uploads/2018/10/24-58.png)
+
+会计报表使我们的经营行为数量化了，你所有的经营行为都可以在会计报表中找到。由此带来了财务分析。透过报表看管理，这是对于我们内部管理者的要求。通过报表，回望你的经营、运营管理，哪儿做得好，哪儿有问题，你要非常清楚。根据问题才能制定下一年度的经营计划。所以对于内部管理者来讲，要透过报表看管理。
+
+3.公司金融
+
+对一家公司来讲，如何将外部投资人的资源给整合回来，如何融到钱，是公司金融的核心。由会计报表出发，通过信息披露，让外部投资人通过会计报表来了解你公司的价值，是最基本的方式。
+
+我们要让投资人认识我们公司的投资价值，所以通过信息披露告诉投资人，我们公司的产业经营部分特别有投资价值，未来会给你带来好的预期收益，我们还能够控制风险，投资人才会愿意给我们投资。
+
+投资人让你一忽悠，就能给你投资了？不会。所以，投资人会做价值分析。投资人得问问自己，我给他的产业投资，值还是不值？所以，透过数据看数据背后的故事，这就是外部投资人看报表的目的。看你的产业经营具不具有核心竞争力，未来有没有预期，能不能够控制风险等等，也就是我们前面提了的六大挑战。
+
+通过报表看数字背后的故事，怎么看呢？利润表和现金流量表向投资人呈现的是这个公司的内在价值。这个公司报表上利润好，现金流不错，光有这些还不行。还要通过看供产销来看你公司的商业模式独特是否独特。供产销作为心脏，健康吗？血液、现金流能造出来吗？
+
+硬指标（现金流量表和利润表），软实力（运营管理和商业模式）都要看，这是内在价值。利润表和现金流量表，在投资心理学中，是打动投资人的报表。也就是说，是让投资人心动的报表。
+
+但心动不完全等于行动，还需要更加深入的了解和分析。资产负债表向投资人呈现的就是预期，呈现未来是否是盈利的。
+
+因此，利润表和现金流量表看的是过去，是你的内在价值。资产负债表看的是未来，展示的是预期收益，它们两个共同构成了这个公司的投资价值，也就是公司价值。
+
+![](/uploads/2018/10/24-59.png)
+
+大家一定要对号入座，要从你作为一个管理者，企业家经营的角度出发，把整个企业资本联系在一起来考虑我所讲的内容。我所讲的是财务、会计、金融联动的资本战略，这幅图就是资本战略的管理模型。
+
+总结上面所讲的内容，我们可以看到资本战略的管理系统由四个部分组成。分别是运营管理、财务管理、会计报表和公司金融。
+
+整个模型是：
+
+从产业经营（运营管理）出发，
+形成内部资本的管理（财务管理），
+按照一定的会计政策编制报表（会计报表），
+把这些报表披露给外部投资人，投资人进行价值分析，来决定给你投资（公司金融）。
 
 公司内部的管理者进行财务分析，改善我们的运营管理、财务管理。所有的资本都是为了推动我们企业的发展、管理的提升，这就是企业的资本管理系统。
 
-资本管理战略的三个子战略：
+而资本管理战略又由三个子战略组成：
 
-1. 如何管理好内部的现金、资金、资本，这是内部的财务战略。
-2. 如何披露信息，如何编制报表，这是会计战略。
-3. 如何整合外部的资源，这是金融战略。
+第一个子战略：如何管理好内部的现金、资金、资本，这是内部的财务战略。
+
+第二个子战略： 如何披露信息，如何编制报表，这是会计战略。
+
+第三个子战略：如何整合外部的资源，这是金融战略。
 
 总的来讲，资本战略的管理模型由一条纵贯线（资本管理系统）+三大子战略（会计战略、财务战略、金融战略）构成。
 
-![](/uploads/2018/10/24-01.jpg)
+![](/uploads/2018/10/24-60.png)
+
+好的，第一讲内容到此为止。后面几讲我将给大家讲授子战略之间的内在联系，以及各自的重点。请大家关注后面的课程内容。
