--- a/_posts/2018-10-24-293-gsjrx02.md
+++ b/_posts/2018-10-24-293-gsjrx02.md
@@ -11,132 +11,290 @@ tags: [公司金融学]
 
 # CHAPTER 2: 金融财务会计联动的资本战略
 
-# 会计战略、财务战略、金融战略（三个子战略）
 
-## 会计战略
+第一讲中，我们讲了资本战略管理模型，也了解到资本战略由会计战略、财务战略和金融战略三个子战略组成。这一讲我们要对他们进行更进一步的讲解，从了解三个子战略，到跟深入的了解资本战略，进而构建大家的资本思维。
 
-会计战略的作用是，对内连接管理者（财务战略），对外连接投资人（金融战略）。
+![](/uploads/2018/10/24-61.png)
 
-会计战略的核心“三本当家”。
+一．会计战略、财务战略、金融战略（三个子战略）
 
-1. 资本对应资产负债表；
-2. 成本对应利润表；
-3. 人本对应公司管理者，指的是公司的财务风格。
+1.会计战略。
+首先来强调一下会计战略。从作用上大家可以看到，会计战略对内连接的是公司的各位管理者，对外连接的是外部投资人。
 
-人本：财务风格的类型
+我把会计战略的核心叫做“三本当家”，分别是资本、成本和人本。
+资本对应资产负债表；
+成本对应利润表；
+人本对应公司管理者，指的是公司的财务风格。
 
-管理者特质：以资源为导向
+![](/uploads/2018/10/24-62.png)
 
-财务风格：激进的财务风格
+投行有一句话，“我们不投项目，我们投的是人”，透过报表是可以看到人和组织的特质的。看单个的人，看的是财商；看一个组织，看的是财务风格。
 
-特点：资产规模超过需求、财务风险高、利润表不一定漂亮
+最基础的财务风格主要有两类：
+第一类，以资源为导向的企业家管理者聚到一起形成的组织。他们所形成的是一个激进的财务风格。
 
-管理者特质：以收益为导向
+有些管理者见了资源就想拿到自己这儿来，所以资产规模超大，超大不仅仅是多，而是超过了他的需求。由此，他们的财务风险比较高，利润表上的利润不一定好看，因为那么多的资产折旧吃了利润，那么高的负债，利息也把利润给吃了。这是激进型的财务风格。
 
-财务风格：稳健的财务风格
+第二类，以收益为导向来管理公司的管理者形成的组织。他们会形成稳健的财务风格。利润漂亮，财务风险小。他们的问题在于未来的盈利能力不可靠。
 
-特点：利润表漂亮、财务风险小、未来的盈利性不可靠
+![](/uploads/2018/10/24-63.png)
 
-会计战略的核心就是通过三本当家来展示出我们的资本形象。
-（资本报表漂亮，资本形象好，公司的投资价值就高。）
+大家看，不同的财务风格之下，你的风险、你的投资价值、成长的路径是不一样的。
 
+会计战略的核心就是通过三本当家来展示出我们的资本形象。三本当家的核心也是如何树立良好的资本形象。我们在商品市场上讲的是品牌形象。在资本市场上则要讲资本形象。
 
-## 财务战略
+举个例子，大家到日本去玩一趟，会背一个马桶盖回来，说那是日本造的，就是比中国的好。其实，那是我们中国企业造的，你还从日本背回来，你觉得日本的产品好。而提到我们中国的品牌，好像就不行。所以，商品市场我们讲品牌形象，到了资本市场要讲资本形象，这是非常关键的。你的资本报表漂亮，资本形象好，公司的投资价值就高。反过来，投资价值就会降低。这是会计战略的核心，管理好自己的资本形象。
+
+2.财务战略。
 
 财务战略是对公司内部资本的管理，分成两部分：现金和资金管理。
 
-三个核心：
+也正因为财务管理是基于公司内部对资本进行管理的过程，所以财务战略的核心一定是和管理者的运营管理互动的。运营管理怎么做，财务就会怎么管，反过来财务也会制约大家的运营管理。
 
-1. 运营管理的核心是财务管理；
-2. 财务管理的核心是资金管理；
-3. 资金管理的核心是现金流管理。
+中国有一句老话，叫做“兵马未动，粮草先行”。大家想一想，成立一家公司首先有本钱，从你成立公司那天开始，你的金融、资本管理已经开始了。
 
-现金流是企业的血液，是反映企业风险的重要指标
+兵马已动，粮草不动，行不行？不行。运营管理和财务管理一定是互动联系起来的。由此在财务战略这里，要强调三个核心：
 
-现金流可以揭示三大风险：
+运营管理的核心是财务管理；
+财务管理的核心是资金管理；
+资金管理的核心是现金流管理。
 
-1. 现金短缺（企业贫血）现金短缺，缺少融资能力
-2. 现金浮存（企业三高）账面长期存在大量浮存现金
-3. 成长性破产（企业假瘦）过度投融资导致现金流枯竭
+![](/uploads/2018/10/24-64.png)
 
-现金流解决的是生成问题，那资金解决的就是发展问题。
+我们倒着来分析，一个一个来看。
 
-运营管理的高级境界是你能够找到那个重点、难点、关键点，非常精准，并且加以解决。
+首先，来看资金管理的核心是现金流管理这句话。这句话说明了现金流管理是重中之重，因为现金流是企业的血液，一个人如果血液出了问题那肯定就活不了了。
 
-财务管理的最高境界是“财行如水”。
+当我们去观察一个企业的现金流量时，并不是看你有多少钱，而是要把握风险。因为现金流一定是和企业的风险相连的。因此，现金流可以给大家揭示一个公司可能的三种风险：
 
-为什么运营管理的核心是财务管理？
+第一种风险：企业贫血。贫血是指一个公司的战略很伟大，项目特别好，但是没钱来干。
 
-1. 财务管理是全过程、全方位、综合性的管理
-2. 财务管理是全员的管理
-3. 财务管理是运营管理的目标（追求利润）
-4. 财务管理是运营管理的预警机制
+大家注意，公司没有钱，不可怕，大家一定不要怕。我们要怕的是没有培养出来融资的能力，我们把这种企业缺钱，又没有融资能力的风险，叫做现金短缺。企业贫血并不仅仅是缺血，而是没有输血的机制，这是第一种风险。
 
-## 金融战略
+第二种风险：企业三高。我们人有三高，企业也有三高。我天天都在跟企业打交道，经常会看到大家的报表，有的企业长期账面上趴着资金。我就问：你们资金为什么不用起来？因为通俗来讲，钱可不是看着玩的，应该是用着玩的。只有在用的过程中，才能够创造价值。
 
-核心：三个转变
+他们是怎么回答我的？
 
-1. 财务管理的转变，从利润管理向价值管理的转变
-2. 管理者的转变，从内部管理向外部整合的转变
-3. 公司模式的转变，从产业经营向产融经营模式的转变
+第一种回答，陈老师，我们好不容易才挣这点钱，真舍不得花。
 
-产业+金融
+第二种回答，陈老师，你说干什么吧？虽然我现在有很多资金，真不知道下一步该怎么做。
 
-1. 产业为本，金融助推
-2. 深度挖掘产业中的金融特征
-3. 通过金融运作促使产业发展
+第三种回答，陈老师，企业不投资是等死，投资是找死，还死的更快。陈老师，真不敢花，真不敢投。
 
-公司金融的关键是资源整合。
+所以大量现金趴在账上，我们把这种现象叫做现金浮存，没有根基，没有未来的成长性，这是第二种风险。
 
-# 资本战略
+第三种风险：企业假瘦。这也是一个医学名词，怎么解释呢？我们的产品特别好，消费者也真的特欢迎，抢着买，市场绝对棒。但是，金融战略出问题了，因为都好，所以就大举投资、融资，最后现金流枯竭了，企业做不下去了。这是企业假瘦，我们把这种风险叫做成长性破产。
 
-第一个层面：权益资本
+这对于创业型企业尤其要防范，所以重中之重是你的现金流。今后大家再看到钱，就不能光看有多少，而是要看背后的风险。再次强调，资金管理的核心是现金流的管理。
 
-1. 债券资本->债权人权益->偿还权->偿债风险
-2. 股权资本->股东权益->所有权->控制权转移的风险
+![](/uploads/2018/10/24-65.png)
 
-股权结构的三个拐点：
+然后，再看财务管理的核心是资金的管理这句话。企业的发展、企业的投融资都是需要资金的。如果说现金流解决的是生存问题，那资金解决的就是发展问题。资金管理与金融相连，如何融资、如何投资，找到资源对我们的企业都至关重要。我们会在金融战略更进一步强调这个观点。
 
-1. 35%，你拥有相对控制权
-2. 51%，你拥有绝对控制权，但重大决策话语权没有在你这儿
-3. 67%，你既有绝对控制权，重大决策的话语权也在你手里头
+再往上走一级，运营管理的核心是财务管理。很多同学对这个观点可能不同意，为什么？
 
-第二个层面：管理中的资本
+有的同学会说：我现在正在创业，最着急的是生产出来的产品得卖出去，所以营销、市场重中之重。
 
-每天用的钱，比如工资，购置设备等等。
+有的同学会说：现在都强调“互联网+”，我们公司是传统企业，所以最难的是在我这个传统企业里头，怎么应用互联网，这太难了。
 
-第三个层面：战略层面的资本
+有的同学又说：我现在发展到今天，干部和中层跟不上我了，人力资源重中之重。
 
-强调资源整合的能力，要树立天下资源为我所用的胸怀。
+总体来说就是一个错误的思想，大家觉得财务管理是缺不缺钱的问题，我又不缺钱，财务还顾得上，所以很多同学不认同运营管理的核心是财务管理。
 
-三组资源：
+但是，我要强调的是运营管理和财务管理的理念是不一样的。
 
-第一组：经济资源、人力资源，培育了企业的营运能力。
+运营管理讲的是点的管理，我们一个公司、一个企业，在不同的发展阶段、不同的年度，管理重点、难点、关键点不一样。因为内外部的环境变了，运营管理的高级境界是你能够找到那个重点、难点、关键点，非常精准，并且加以解决。
 
-第二组：有形资源、无形资源，培育了企业的获利能力。
+但是，财务管理不是这样的，财务管理的高级境界是“财行如水”。大家学到这里，可以闭上眼睛，把这四个字默念几遍，来感受一下财务管理的这种境界。
 
-无形资源的三个分类：
+行，就是动。让你的资金动起来。就像刚才我说钱不是看着玩的，一定是用着玩的，财要行动。动成什么境界？水。水是最温柔的，很舒服。但是，水也能载舟，这就是它的力量，排山倒海。你怎么形容水都不为过。这才是财务管理的境界。
 
-1. 报表上的无形资产。专利权、商标权。
-2. 围绕着市场（你的主业市场）所形成的技术、品牌、渠道、关系、大数据。
-3. 企业文化。
+我们来归纳一下，为什么运营管理最终都归结到财务上来？
+
+第一点，财务管理讲流动性管理，不是讲点的管理。财务管理是一个全过程的管理、全方位的管理、综合性的管理。大家想血液是流到神经末梢的，我们企业的现金流就是在神经末梢，一个企业的神经末梢，所以是一个全过程、全方位、综合性的管理。
+
+第二点，财务管理是一个全员的管理。也就是说，一个公司内部所有人都要对财务负直接责任。因为业务是从大家手里做的，大家引起了资金的现金流变动，大家要负直接责任。
+
+第三点，财务管理是运营管理的目标。通过财务管理可以提高运营管理的水平，从而提升我们的利润。
+
+最后一点，财务管理是运营管理的预警机制，这也是最重要的一点。因为我们企业的经营都是连绵不断的，我们所有管理者、企业家都很难停下来，回望过去的经营留下什么风险，留下什么沟沟坎坎，但是财务会给大家提供阶段性的现金流变化的状态，由此揭示我们运营管理中的风险、危机。
+
+![](/uploads/2018/10/24-66.png)
+
+诗里有一句话叫“春江水暖鸭先知”。财务管理就是在座各位企业家怀中的那只鸭子。企业经营的冷暖、好坏、风险、危机，首先会在现金流、资金链中显现出来。所以，财务管理是我们运营管理中最好的预警机制，大家要抓得住。
+
+以上是我们强调的财务战略，是它是对资金链和现金流的内部资金管理，这是关键，要抓住。
+
+3.金融战略。
+
+我们下面看金融战略。这里特别强调的是理念，大家的理念能不能转变过来是很关键的问题。
+
+金融战略的核心是三个转变：
+
+第一个转变：财务管理的转变。财务管理以利润为导向，金融是以价值为导向，所以要从利润管理向价值管理转变。
+
+第二个转变：管理者的转变。从内部管理向外部整合转变。我们不能只是紧紧盯着利润，不能只是紧紧盯着公司内部，还要去外部整合资源。
+
+第三个转变：公司模式的转变。从产业经营的模式，向产融经营模式转变。产融模式的转变是产业+金融。注意不是“互联网+”，“互联网+”是互联网在前，产业+金融的模式是产业为本，金融助推。我们是深度挖掘产业中的金融特征，通过金融运作，促使我们的产业发展更好、更盈利，所以要从单一产业经营向产融经营转变。
+
+![](/uploads/2018/10/24-67.png)
+
+这就是公司金融的核心，即三个转变。而公司金融的关键是资源整合。
+
+以上是三个子战略的核心与关键点。大家要能够把握资本战略的三个子战略的核心与关键点，把握以后再来看总体的资本战略会更加清晰。
+
+二．资本战略
+在熟悉了三个子战略的核心与关键之后，我们再来看总体的资本战略。
+
+1.资本的定义
+首先，要给资本一个定义，什么是资本？大家说资本就是钱。确实是，但资本显然不仅仅是钱。做企业不能高大上，空洞又空洞，资本一定要落到实处，资本运营必须要落到实处。
+所以，对一个企业来讲，资本在三个层面进行管理和运营：
+
+第一个层面：权益资本。
+
+权益资本有两种：
+（1）债权资本，会形成债权人权益。大家想债权人有什么权益？有借有还，具有偿还权。对于企业来讲，对于一个公司来讲，这是借来的钱，还不起我们有偿债风险。
+
+（2）股权资本，股权资本形成股东权益。股东具有所有权，以及由所有权所形成的经营决策权、利润分配权、投票表决权等等。但最根本的这个公司是他的，所有权。
+
+对于公司来讲，拿到股东的这笔钱叫自有资金。不是借来的，是自有资金，不需要还。那就没有风险了吗？不是。还是有风险，不过这不是财务性风险了，而是战略性风险，就是控制权转移的风险。你拿到资金，企业就有可能控制不住了。因为我们前面讲，所有权和实际控制权，可以合在一起，也可以是分离的，当面临股权资本的时候，你的控制权可能会没有。
+
+![](/uploads/2018/10/24-68.png)
+
+这里我们引申一点，从股权资本这里应该引起大家更深层次的思考。
+
+首先，你要注意的是所有权和控制权的博弈，两种权利的博弈。所有权的多少对公司影响的大小，和你出了多少钱有关。出资多少构成了股权结构，结构不同在公司里头的影响力、决策权不一样。股权结构有三个拐点：
+
+第一个拐点，35%，你有相对控制权；
+第二个拐点，51%，你有绝对控制权，但重大决策话语权没有在你这儿；
+
+第三个拐点，67%，你既有绝对的控制权，重大决策的话语权也在你手里头。
+
+![](/uploads/2018/10/24-69.png)
+
+所以股权结构的不同，代表了你在公司里头影响权利的不同，这与企业权利安排有关。
+
+大家注意，任何公司都有公司政治，有权利之争，国企和民企都一样的。权利安排决定了控制权的问题。因此，这就是我们引申出的一个很重要的问题，公司治理结构。比如说马云、王石，他们在这条路径上拥有的股份并不多，但是作为管理者他们控制着公司。大家都知道万宝之争，宝能通过二级市场收购，成为万科的第一大股东。由此宝能曾经提出过罢免王石和他的管理层，但没有成功，这个故事是大家关注比较多也比较熟悉的。
+
+但是，实际上，宝能在同一时间用了同样的方法，二级市场收购，成为大股东，成功取得了另一家公司的控制权，这就是南玻，也是上市公司。都是宝能运作的，方法都是一样的，都在股权结构上成为第一大股东。但是，一个就拿到了控制权，一个没有拿到控制权。
+
+原因在于二者的博弈，在于治理结构的安排。其实资本运营中最具魅力的运作，也来自于这个地方，这是资本的第一层面。
+
+第二层面：管理中的资本。
+
+大家往往会忽视管理中的资本这个概念。一提到资本、资本运营，大家感觉都是高大上的。而事实上，现实中我们每一天都在跟它打交道。所以管理中的资本，并不是那个高大上的资本，而是非常、非常现实的每天面对的东西。
+
+就是你今天要付款了，明天要发工资了，我们账上有钱吗？资金的问题。
+
+就是你2018年下半年要不要添一台设备？资产的问题。
+
+就是你年底、年初要招工，招人都招不上来，人工成本在不断增加。人力资源的问题。
+
+所以，现实管理中的资本，以资金、资产、人力资源等等各种形式存在，构成了各个公司职能化管理，这是管理中的资本。
+
+第三个层面：战略层面的资本。
+
+我们再来看战略层面的资本。资本是一个企业可以运作的，并且能够带来预期收益的资源。企业需要资源，为什么？预期收益。而这里头我要强调两个关键词：运作、资源。
+
+资本这个概念，并没有强调这是我们公司所拥有的资源。我再强调一遍，在资本层面并不强调拥有。大家想，当我拥有的时候，产权是我的，应该在我的报表中。而运作，可以运作我公司自己的，也可以运作别人的。我的，别人也可以来运作。我们互联网中的平台公司，实行的平台战略，其实也就是这个概念。
+
+所以，资本不讲你的、我的、他的，讲的是资源整合能力。我们在资本层面考虑问题的时候，讲资源整合，而不论你、我、他。换一个角度来讲，我们要树立一个天下资源唯我所用的胸怀。是运作，而不是拥有，运作什么了？资源。
+
+经济学中有一个假设，资源是稀缺的。没有什么东西可以让大家取之不尽，用之不绝。我们中国经历了40年高速增长，什么东西不缺？
+
+有的同学说不缺钱。那我们为什么还搞了亚投行、金砖国家开发银行等等？
+
+有的同学说我们不缺人。还放开二孩干什么？放开二孩是因为我们缺15岁-60岁的劳动力人口，人口总量不缺，但我们缺这块劳动力人口，这块的问题非常严重，所以我们放开二孩。
+
+所以，作为企业来讲，资源也是稀缺的。对于一个企业来讲，要去整合的资源有哪些？三组资源：
+
+第一组：经济资源、人力资源。
+
+经济资源大白话一点，就是要有钱。人力资源，要有人。有人、有钱，才能构成一家公司的运营能力，这是把资源与能力结合在一起。
+
+当我们去讲资源的时候，一定要考虑能不能够驾驭它？所以第一组经济、人力资源，培育了这个企业运作资源的能力，运营能力。
+
+![](/uploads/2018/10/24-70.png)
+
+第二组：有形资源、无形资源。
+
+有形资源，看得见，摸得着。我要要强调的是无形资源，在整个企业资源中，无形资源，往往能够建奇功，大家要重视无形资源。无形资源对于企业来讲有三类：
+
+（1）报表上的无形资产。大家熟悉的，专利权、商标权都在报表上。
+
+（2）围绕着市场（你的主业市场）所形成的技术、品牌、渠道、关系、大数据。
+
+举个例子，LV。一提LV，大家会想包包，奢侈品。但是LV集团并不认这个，它说我们不是箱包的生产商，而是一个品牌的整合商，专门去收购品牌。收购完品牌之后，再挖掘这个品牌的故事，围绕这个故事重新设计，并且输出管理，迅速把这个品牌打造成一个知名的奢侈品品牌。LV的箱包历史很长久，但是LV集团也不过20多年历史，却已经是全球最大的奢侈品生产、销售商，凭的是它的品牌的整合能力。
+
+由此，LV形成了五大类产品，除了最传统的箱包，现在还做服饰、酒、酒店、文化传媒，五个产业。LV就要整合这些品牌，所以说LV是一个品牌的整合商。
+
+（3）企业文化。无形资源中更加无形的是企业文化。大家会说文化跟资本、利润有关吗？在商品市场上，文化是能创造利润的。其实大家真的不是在卖产品，产品的内核是我们作为一家公司，我们作为企业家，你的所思所想所追求，是你的文化。
+
+在资本市场中，我们收购一个企业，战略可以合，设备可以合，公司都合在一起了，甚至两个公司的人都坐到一个办公室里头了。但是，两家公司的企业文化也能融合在一起吗？太难了。最终并购过程中，文化整合的失败，让企业做不下去的比重，占了60%。最主要是文化的冲突，所以，文化在资本战略中也起了决定性作用。
+
+我们的有形资源，往往伴随着时间、科技进步、自然的作用，往往是在不断贬值。而含有企业文化的无形资源越老越值钱，价值越来越高。因为文化是需要时间来积淀的。
+
+第二组资源培养我们一个公司的获利能力，因为我有了经济资源，机器、设备、厂房、办公楼，可以造产品，卖产品。有了企业文化，有了核心竞争力，会卖得更好，做得更有价值。这是第二组资源，培育一个企业的获利能力。
+
+![](/uploads/2018/10/24-71.png)
 
 第三组：优质资源、劣质资源。
 
+优质资源大家都喜欢，人人都爱。但是在资本层面更强调劣质资源的整合。不是说不整合优质的，我们有实力、有资金去整合优质的，当然很棒。但事实上资本更强调劣质资源的整合。为什么？比如说云南省投资集团，用2.5亿从“绿大地”大股东手里头收购股份，成为“绿大地”的第一大股东。2.5亿听起来资金挺多的，实际上非常便宜。绿大地是中国股市中第一家以苗木上市的公司。而苗木这个概念到今天都是一个非常好的概念，因为我们从中央政府到地方政府都强调绿色发展。
+
+但是，绿大地上市后，有人来检举他财务作假，老板、财务总监都进监狱了，业务也没得做，证监会给它戴了一个ST的帽子，已经从优质变劣质了。这时候云投出手收购它，成为第一大股东。2.5亿什么概念？是它上市的时候发行价格打了对折，价格上非常便宜。
+
+我们说劣质资源，从资本层面来讲，运作的成本低。云投在收购了绿大地之后，做了几件事情：
+
+第一件：改组董事会。目的是控制权。
+
+第二件：做战略。重新制定战略，这个战略是我的团队帮助他们做的，由苗木升华成为生态，把名字也变掉了，现在叫做云投生态。战略变了，名字也变了。由集团装进去了更多资源，因为从苗木变成生态，紧接着在资本层面进行并购，构架生态的产业链，然后它的股价或者说市值就提升了，股价涨停了。
+
+到此为止，绿大地由劣质资源又变成了优质资源。大家回忆一下，资本市场对我们公司的一个挑战是预期收益，我们收的是劣质，能够在未来把它变成优质的，这个预期就做的非常好。
+
+我来归纳一下，为什么在资本层面，更强调劣质资源的整合，因为第一成本低，第二预期好，所以更具投资价值。因此，各位别光惦记着好的，也得看看劣质的。
+
+而这里的问题就是你真的能把劣质变优质吗？不一定。即使我们收购的是一个优质的，能够再优质吗？有没有可能在你的手里变成劣质的？有可能。一切皆有可能，这叫什么？风险。
+
+所以，这一组资源培养的是一个企业控制风险的能力，控制能力。
+
 我们讲了三组资源，三种能力是对应的。
 
-1. 经济资源、人力资源培育的是运作资源的能力；
-2. 有形资源、无形资源培育的是营运能力；
-3. 优质资源、劣质资源培育的是控制风险的能力。
+第一组，经济资源、人力资源培育的是运作资源的能力；
 
+第二组，有形资源、无形资源培育的是营运能力；
 
-![](/uploads/2018/10/24-02.jpg)
+第三组，优质资源、劣质资源培育的是控制风险的能力。
 
-“四资”的理念：
+![](/uploads/2018/10/24-72.png)
 
-1. 资源变资产；
-2. 资产变资本；
-3. 资本变资金。
+这就是资本的定义，我们首先搞清楚什么是资本。从这个角度，资本和公司无时无刻是紧密相连在一起这是，我要强调的第一点。
+
+2.资本战略的核心与关键
+
+在资本战略层面，我们讲了资本的定义。那作为资本战略，它的核心是什么？核心是资源，其关键点用一个字来表示，就是“变”。
+
+我们说对一个企业来讲，资源是稀缺的。但是，光有资源不行，还要把这些资源变成资产。我们掌控各种资源，土地资源、机器设备，人力资源，我们把土地变成了机器设备，变成了企业可运作的资产，才能够带来利润。
+
+但是资源变成资产也仅仅是一变，我要强调的是更多的变化。我把它叫做“四资”的理念，即：
+
+资源变资产；
+
+资产变资本；
+
+资本变资金。
+
+![](/uploads/2018/10/24-73.png)
+
+所谓的“变”就是一种创新、创造的能力。如何完成四资之间的变化？这是金融战略要解决的问题。
+
+完成了资源、资产、资本、资金间的转变，怎么使用这四资？这是财务战略的问题。
+
+用的好不好，有哪些优势、劣势？这就是会计战略要解决的问题。
+
+三大子战略之间的关系是这样的，紧紧围绕着“四资”，也就是资本管理的过程，怎么变？金融战略来解决。怎么用？财务战略来解决。用得好吗、变的好吗？你管理的怎么样？会计战略来评价。
+
+希望大家能把这三个子战略联系起来，核心“四资”是整个资本战略。整个资本战略紧紧围绕着资源来展开。
 
 我们来对比一下金融战略、财务战略。
 
@@ -148,20 +306,110 @@ tags: [公司金融学]
 
 在理论基础上。无论是金融战略还是财务战略，其共通的基础理论都是公司理论。但是财务战略里更强调会计学，给出了各种指标用于评价。而金融战略强调金融学。这也是财务战略、金融战略不同的地方。
 
-![](/uploads/2018/10/24-03.jpg)
+![](/uploads/2018/10/24-74.png)
 
-由此，会计战略把二者串联起来，你们做的怎么样，由会计战略来评价，我们要树立良好的资本形象。这是整个资本战略的核心、关键。
+由此，会计战略把二者串联起来，你们做得怎么样，由会计战略来评价，我们要树立良好的资本形象。这是整个资本战略的核心、关键。
 
-# 资本思维
+3.资本思维
+最后来讲一讲资本思维。
 
-1. 数量思维
-2. 财务思维
+3.1数量思维
+先来看会计战略。会计战略调的是数量思维。作为企业家要有两个敏感性：
 
-![](/uploads/2018/10/24-04.jpg)
+第一个敏感性：政治敏感性。国内国外都一样，要有政治敏感性。所谓政治敏感性，就是你对外部商业环境的感受。
 
+第二个敏感性：数字的敏感性。企业运营出的数据、财务出的数据，尤其会计给大家出的数据，反映整个运营管理。数字，会计报表使我们的经营行为数量化了。
 
-![](/uploads/2018/10/24-05.jpg)
+大家忘了去年今天你们做什么，但是会计报表会记录下来。所以数据反映了你运营管理的好坏、问题、优势、劣势。我们要有数字的敏感性。
 
+因此，我强调数量思维，三句话：
 
-![](/uploads/2018/10/24-06.jpg)
+第一句话：记住一些重要的数据。
 
+第二句话：掌握一些关键的指标。
+
+第三句话：用数字、数据管理公司。
+
+其实这些建议都是非常实在的，需要大家去用的，以上是数量思维。
+
+3.2财务思维
+下面看财务战略，财务思维。财务思维是基于企业内部资金管理，怎么用的好，怎么管的好，从而提高企业的利润，提高运营管理的水平。
+
+所以，财务思维可以总结为一个高度，两个定位，两个模式。
+
+首先，来看一个高度。一个高度指的是战略高度。一个企业里头花钱不能随便花。比如有的同学觉得要融资就多多益善，错的。大家注意，不是你弄了很多钱那叫本事，不是的。投资和融资，一定要在战略层面上来考虑，我要不要花这钱，要不要这笔钱。
+
+比如说百度，在创业的时候，可以在天使轮拿到很多钱。但是，几位创业者说，我们一定要规划好，不是钱越多越好。最后他们的天使轮，只拿了100万美金，而且这100万按照投资人给他们的规划是用半年，但他们用了1年。从资金管理来讲，首先他们花钱有规划。而且，由于第一轮精打细算这100万，还带来了新的投资人。大家注意一下，战略的高度，用大白话来讲，就是花钱要站在战略的高度考虑。
+
+然后，再看两个定位。大家想融得资金，把公司做好，就要讲两个定位。在商品市场上有一个二八理论，航空公司和银行就是二八理论用的最好，牢牢抓住那20%的客户。在资本市场上，也有一个理论，我给起了一个名字叫做“新二八理论”。在一个行业中，前两位的公司往往占据了这个行业80%的市场份额，是最具投资价值的公司。
+
+在一个行业中，前两位在指什么？商品市场中，我们要到前两位去，也就是说，商品市场上的定位是要求大家是龙头企业，行业领袖。
+
+那作为龙头企业，在这个行业中占80%的市场，这就是资本市场对大家的期待。你占的份额这么大，才有投资价值，这是资本市场给大家的定位。
+
+我们整个财务运作，围绕着这两个定位。我们要从利润管理向价值管理转变，首先在商品市场上成为龙头企业。在一个行业中，前两位企业占据了这个行业80%的市场份额，是最具投资价值的。
+
+最后，来看两个模式。在操作层面上怎么花钱，怎么管钱就要基于商业模式和管控模式。
+
+商业模式不同，你投融资花钱、用钱不一样。管控模式不同，你投融资花钱、用钱也不一样。比如，我们是战略管控型的，我们是财务管控型的，我们是集权的，我们是分权的。大家想，我们资金的路径一样吗？不一样。资金的管理也不一样，所以商业模式和管控模式，决定了我们整个资金管理的路径、模式的不同。
+
+尤其我们成长型企业，大家会觉得我公司还小，这些东西是不是离我远？其实一点都不远。首先理念先行，任何一个伟大的公司，都是由小而变大的，在这个变大过程中，我们如何进行财务管理，如何把每一分钱，每一笔资金用好、管好，是大家现实的挑战。而这种商业模式、管控模式，决定了你以何种方式、以何种手段来管理企业的财务。
+
+![](/uploads/2018/10/24-75.png)
+
+中国人讲“站得高，才能看得远”，我希望大家不要觉得远，就在大家的身边。财务思维，一个高度，两个定位，两个模式。
+
+3.3金融思维
+下面我们再来看金融战略、金融思维。为了让大家记得住，金融思维我也给大家总结了三句话。
+
+第一句话：风险为先。
+公司未来的发展是不确定的，可能盈利，可能不盈利。作为一家企业，要做到风险为先，建立风险管理三大机制：
+
+（1）风险预警机制。干之前先想清楚自己的风险有多大，自己扛得住吗？风险太大，是不是不能做了。有风险是不是就不做了？不是。有风险，我们为了谋求更好的收益有时候也要做，那就需要关注第二个机制了。
+
+（2）风险控制机制。实际经营过程中，我们不是神仙，不能说风险不能出现，出现了就控制在我们可以接受的范围之内就可以了。
+
+（3）风险退出机制。我们都说了上山容易，下山难。杀进去容易，退出难。战争中有一句话：开战在我，结束在彼。一战、二战所有战争，不是我们开战这方能说结束就结束的。商场如战场，进的时候先想退路是最重要的，要有风险退出机制。
+
+风险退出有四个标准需要大家把握好，分别是：
+合适的时间；
+恰当的利益；
+全身而退；
+东山再起。
+有一部电影里头怎么说的，我们今天的撤退是为了明天大踏步地前进，不是退了没事干了。这就是第一句话，风险为先。
+
+第二句话：动态决策。
+我现在要跟大家募集资金去买股票，假设现在已经投了100万。我的问题是你们作为我的股东打算什么时候卖这支股票？假设这支股票现在已经涨到200万了，卖不卖？
+
+我再告诉大家，这支股票未来可能涨1000万，你们不后悔吗？但是也可能多等一天就亏得血本无归了！所以，怎么办？
+
+这就要回到金融的本质。金融的本质是什么？投资就是把现在的钱放到未来去花。而融资是把未来的钱挪到今天来用。金融的本质通俗来讲，是投资人和融资者在对赌未来。当然如果从严谨的概念上讲，金融学的本质是研究人们在一个不确定的环境中，如何实现资源的跨期配置，这是非常理论的一句话。
+
+我们在赌未来，你还老盯着现在，行不行？不行。一定是动态决策。从现在看未来，要把未来挪到今天来考量。这就是金融思维的第二句话，动态决策。
+
+第三句话：成本观念。
+
+第一，强调资源。公司金融所强调的成本是资源，成本是对公司资源的损耗。
+
+第二，强调过程。成本覆盖了一个公司的全部的生命周期。分为过去时、现在时和未来时。
+首先，过去时会形成隐性成本，什么是隐性成本？比如说我一个学生做建筑垃圾的，处理建筑垃圾，循环经济，非常好。但是当国家强调环保的时候，他这个企业就很难运作了，就不盈利了，微利了，甚至是亏损，就是因为政策变了。
+
+再比如说有一些企业在会计上内外两套账，税务不查没事，关键当有一个企业来投资的时候，你光拿你的外账给投资人看，亏的一塌糊涂，公司还值钱吗？我就碰到江西的一个企业问我，陈老师，英国有个公司要给我投资，我是内外两套账，你说怎么办？拿外账给他看我一分钱不值。但是如果我把内账拿出来，肯定就值钱。
+
+所谓过去时的隐形成本，就是在过去经营过程中给现在和未来留下的风险。希望大家自己不要给自己埋雷，关键词是风险，过去时。
+
+现在时的话，大家会有什么成本？制造成本。我们为了取得收益而付出去的代价，制造成本的料工费。我想收益更好，就要控制成本，降本增收。关键词是控制，现在时。
+
+未来时的话，大家会有什么成本？好多同学一定有过这样的想法“哎哟，当初我如果选择XXX的话，现在也就XXX了”，这叫机会成本。大家这些悔不当初的决策所造成的，你已经失去了的，就构成了你的机会成本。关键词是决策，未来时。
+
+综上，需要大家具备完整的成本观念，风险、控制和决策，过去、现在和未来。企业全生命周期中，这种成本无处不在，需要大家管理好，这就是金融思维的第三句话，成本观念。
+
+![](/uploads/2018/10/24-76.png)
+
+最后，我们把这一讲的内容做一个简单归纳。这一讲课程，我们讲的是资本战略。我们从什么是资本，一直讲到资本思维，而且我们分开了来讲，对应到了每个子战略。
+
+我们围绕着资本、资金、资源构架了一个联动的资本战略，也体会到这会计、财务和金融三个子战略之间，紧紧围绕着“四资”（资源、资产、资本、资金）所形成的区别和联系。
+
+![](/uploads/2018/10/24-77.png)
+
+本讲内容就先讲到这儿，谢谢大家！
