--- a/_posts/2018-11-04-309-marketing01.md
+++ b/_posts/2018-11-04-309-marketing01.md
@@ -29,7 +29,7 @@ tags: [管理，市场营销]
 
 一、市场营销是管理交换的策略
 
-第一课的主题是“何为市场营销”。什么是市场营销？没人能完全说得清楚。我们都知道出租车司机是干什么的，牙医是干什么的。比如，牙医就是给患者补牙，填洞，然后收费。但是我们到一个公司的市场部，总能看到三四十人坐在那，忙忙碌碌的。他们在忙什么呢？这些人既不生产产品，又不销售产品。难道他们就像寄生虫，只会增加企业的成本，没有任何价值吗？
+第一课的主题是“何为市场营销”。 **什么是市场营销？没人能完全说得清楚。** 我们都知道出租车司机是干什么的，牙医是干什么的。比如，牙医就是给患者补牙，填洞，然后收费。但是我们到一个公司的市场部，总能看到三四十人坐在那，忙忙碌碌的。他们在忙什么呢？这些人既不生产产品，又不销售产品。难道他们就像寄生虫，只会增加企业的成本，没有任何价值吗？
 
 我们身为市场营销人员，有时候都不好意思说自己是干这个的。如果你有女儿，你希望她嫁什么样的男人？是市场营销经理还是工程师？
 
@@ -41,7 +41,7 @@ tags: [管理，市场营销]
 
 —营销经理要涉猎广泛—
 
-但事实上我们在座的每个人，时时刻刻都在做营销，我们天生都是营销者。小时候你会跟妈妈说，我想喝奶，喝完我才会放你去睡觉。于是你的父母就只能哄你到睡着才能去睡觉。
+但事实上 **我们在座的每个人，时时刻刻都在做营销，我们天生都是营销者。** 小时候你会跟妈妈说，我想喝奶，喝完我才会放你去睡觉。于是你的父母就只能哄你到睡着才能去睡觉。
 
 实际上这就是一个营销行为。它的本质是双方通过交换达到双赢的局面。交换是市场营销的主题，也是市场营销研究的核心概念。
 
@@ -55,11 +55,11 @@ tags: [管理，市场营销]
 
 市场营销的问题数不胜数。它是一个非常宽泛的概念，包括定价、销售管理、广告、市场研发、新产品开发、渠道、零售、批发、商业模式创新等等。每个领域下面又有非常多的细分问题，如果你能成为其中一个主题的专家，就很厉害了。但作为市场营销经理，他们必须要熟悉营销的所有问题，知识的复合性决定营销经理的能力。
 
-也正因为市场营销涉猎范围如此之广，策略如此庞杂，很多小细节就能极大地影响营销的成效。下面我会讲一些市场营销策略的案例，让大家对市场营销有所感知。
+也正因为 **市场营销涉猎范围如此之广，策略如此庞杂，很多小细节就能极大地影响营销的成效。** 下面我会讲一些市场营销策略的案例，让大家对市场营销有所感知。
 
 ![](/uploads/2018/11/04-03.png)
 
-红色的力量——
+**红色的力量**
 
 举个小例子。我今天佩戴的是红色领带，特朗普平日也是佩戴红色领带。这可不是巧合，研究表明女人更喜欢男人穿戴红色。
 
@@ -69,10 +69,11 @@ tags: [管理，市场营销]
 
 ![](/uploads/2018/11/04-04.png)
 
-让竞争催生创意——
+**让竞争催生创意**
+
 腾讯要做社交媒体，就要跟微博竞争。他们要勾画一个迭代于微博之上的社交媒体的蓝图。于是，腾讯就组建了两个设计团队，他们的终极目标就是开发出比微博更好的社交产品。大家注意，腾讯组建了两个团队。
 
-如果你要开发新产品，或者设计创意广告，记得要2~3个团队同时做，让他们相互竞争、相互促进。如果只有一个团队，那只会产生单一团队内部的恶性竞争，从而遏制创新。
+**如果你要开发新产品，或者设计创意广告，记得要2~3个团队同时做，让他们相互竞争、相互促进。如果只有一个团队，那只会产生单一团队内部的恶性竞争，从而遏制创新。**
 
 正如我们所知，腾讯最终开发了一个比微博更好的社交产品—微信。而推动这项创新工作的绝不是设计部，而是市场营销部。记住，好的点子一定产生于市场营销者和消费者研究专员，是他们将构想的新产品带到工程部去制作。因此，产品创新也是市场营销工作的一部分。
 
@@ -88,7 +89,8 @@ tags: [管理，市场营销]
 
 市场营销经理要学会管理，我也通过一些例子来阐述这个观点，让你们对营销管理有一些认识。
 
-要么第一，要么最后——
+**要么第一，要么最后**
+
 假设你的公司要招聘一名营销经理，现在有4个候选人，你让他们下午两点来公司面试。你安插公司的两名员工在这4个候选人中做演员，其中一个人在4个候选人的最前面，编号1号，另一个在最后，编号6号。这样，就有了6个面试者，编号分别为1、2、3、4、5、6。
 
 所有人就位以后，秘书来到等候间请一位候选人进屋，1号（演员）刚要起身，6号（演员）就站起来要冲进房间。
@@ -109,25 +111,25 @@ tags: [管理，市场营销]
 
 因此，当6号候选人一次次要进入房间的时候，聪明的“营销者”应该说：可以啊，快进去吧！我可以等。
 
-因为，聪明的营销者清楚，做不了第一位，就做最后一位，他们会尝试管理这个过程。
+因为， **聪明的营销者清楚，做不了第一位，就做最后一位，他们会尝试管理这个过程。**
 
 当他作为最后一名面试者进屋后，可以跟面试官说：您好，面试官。您一定累了吧，让我们下去喝点茶吧。这样一来，你给他的感觉就是一个非常好的朋友。
 
 我在CEIBS（中欧国际工商学院）教过EMBA课程。我会跟学校讲，别让我教第二堂课，否则我不开课。他们就会问，为什么？我说道理很简单啊，第一个模块的课程是最轻松的。即便讲的不好，学生们也不知道什么是好的什么是不好的，他们可能会觉得EMBA就是这样的。但是等第一门课结束之后，学生们就多少有点概念了。相比之下，第二堂课就不好讲了，一旦你没做好，学生们就会说，教授你忘了什么什么。但最后一堂课就又不一样了，它是16个模块的最后一个，学生们盼着课程结束后终于可以过上正常的生活，周末可以清闲一点。如果你讲的没什么大问题，他们也会很开心，而且永远不会忘记你。所以，要么第一，要么最后，要有这样的战略性思维。
 
-战略性思维对营销管理是非常重要的，包括两个层次：
+**战略性思维对营销管理是非常重要的，包括两个层次：**
 
-第一层：这是一场“游戏”，要做一个按路线前行的棋子；
+**第一层：这是一场“游戏”，要做一个按路线前行的棋子；**
 
-第二层：要做棋手而不是棋子，要成为路线的制定者和管理者。
+**第二层：要做棋手而不是棋子，要成为路线的制定者和管理者。**
 
 作为市场营销经理，不仅要做好营销工作，还要管理好营销工作。虽然市场营销非常广泛，却是有规律可循的。我将市场营销归纳为四个策略，在本模块课程的第二讲中将详细展开。
 
-二、市场营销是庞杂知识的集合体
+**二、市场营销是庞杂知识的集合体**
 
 市场营销工作也是一个收集知识，利用知识，使公司更赚钱、更成功的一个过程。作为教授，我的工作就是去创造、收集并传播知识。而营销经理要想办法把这些知识利用到商业中，去管理你们的营销。再举一个营销管理的例子。
 
-花香让女人短视——
+**花香让女人短视**
 
 有一项有趣的研究，你让一个人去估计一双耐克鞋的价格，如果你往鞋里注入花的香味，这个人往往会给出更高的价格。这个现象在女性身上表现得尤为明显。在男性测试者身上也有，只是差异不是那么显著罢了。
 
@@ -145,9 +147,9 @@ tags: [管理，市场营销]
 
 一家超市的净利润大约在2%~3%之间，商品售价提高0.1%，利润就很可观。如果花香能提高0.1%、0.2%的价格，利润就会提高5%、10%。因此，温迪克西（Winn-Dixie）这么做背后的逻辑就是利用花香降低顾客对于价格的敏感性，从而大幅提高超市的利润率，这也是营销管理的过程。再看下一个案例。
 
-美女让男人短视——
+**美女让男人短视**
 
-心理学中有一个著名的美人效应，说的是当男性看到美女时，会产生短视思维。
+心理学中有一个著名的**美人效应**，说的是当男性看到美女时，会产生短视思维。
 
 比如你问一个男生，现在你有两个选择，一个是现在给他20美元现金，另一个是下周给他30美元的支票，看他会选择哪个。
 
@@ -165,7 +167,7 @@ tags: [管理，市场营销]
 
 这也是对自己的营销进行管理，而不是盲目地做事情。再来看一个营销管理的例子。
 
-用数据分析提升工作成效——
+**用数据分析提升工作成效**
 
 沃尔玛招聘收银员时，会让应聘者填写测试问卷。其中的一道题目是：如果你在一家大公司工作，你是否会在合适的时间提出自己的意见？
 
@@ -181,19 +183,19 @@ tags: [管理，市场营销]
 
 同样，在一家汽车经销商的招聘问卷中有这样一个题目：你死之后，下辈子想成为什么动物？鲨鱼、野猪、狮子、鸟？我不知道答案是什么，但汽车经销商一定知道。他们研究了4~5年，几千名销售岗位的应聘者，发现往往选择鸟的人入职之后的销售业绩都不好，所以再遇到选择鸟的应聘者，他们就不招了。
 
-但是大家也要注意。网上有很多售卖类似问卷的商家，他们声称可以帮助企业测试销售人员的能力。实际上，这些问卷并不是通用的。不同的人在不同企业会成就不一样的事业。汽车经销商可能不招选择鸟的人，但电脑经销商却觉得选鸟的人非常合适。因此，在选用问卷时，应充分考虑到问卷的适用性，同一问卷在不同公司适用性会有很大差异，企业应找到适合自己的问卷。
+但是大家也要注意。网上有很多售卖类似问卷的商家，他们声称可以帮助企业测试销售人员的能力。实际上，这些问卷并不是通用的。不同的人在不同企业会成就不一样的事业。汽车经销商可能不招选择鸟的人，但电脑经销商却觉得选鸟的人非常合适。 **因此，在选用问卷时，应充分考虑到问卷的适用性，同一问卷在不同公司适用性会有很大差异，企业应找到适合自己的问卷。**
 
 ![](/uploads/2018/11/04-08.png)
 
 这是通过数据分析的例子来佐证营销管理的重要性。营销真的不是随便做做就好的，你需要用数据检验自己的假设，用数据分析失败的原因。再举一个与营销管理有关的例子。
 
-帮你小忙的人，往往愿意帮你大忙——
+**帮你小忙的人，往往愿意帮你大忙**
 
-如果你希望别人能帮你一个大忙，要记得先请他帮一个小忙，这是个秘诀。
+**如果你希望别人能帮你一个大忙，要记得先请他帮一个小忙，这是个秘诀。**
 
 我曾效力于一家吸尘器公司，他们的销售方式是上门直销。他们的销售人员到客户家门口时，总会先讨一杯水喝，这就是先让客户帮一个小忙。如果客户愿意给你这杯水喝。那他推销商品的成功概率就会比较大，也就是帮了一个大忙。用“我能喝杯水吗”做开场白显然比“你家真漂亮”好太多了。
 
-这背后的逻辑是那些愿意帮你一个小忙的人，往往更愿意帮你大忙。而且在他们帮你忙的过程中，他们会更加喜欢你。这招你也可以用在追你喜欢的人的时候。如果你想让别人喜欢你，你就先让他帮你一个小忙，事情往往是这么发展的。
+**这背后的逻辑是那些愿意帮你一个小忙的人，往往更愿意帮你大忙。而且在他们帮你忙的过程中，他们会更加喜欢你。**这招你也可以用在追你喜欢的人的时候。如果你想让别人喜欢你，你就先让他帮你一个小忙，事情往往是这么发展的。
 
 ![](/uploads/2018/11/04-09.png)
 
@@ -215,7 +217,8 @@ tags: [管理，市场营销]
 
 而事实上恰好相反，市场营销往往是小涟漪引起大波浪，就像天气一样，就像蝴蝶效应一样。今天有人在这里抽了一根烟，也许一年之后引发了广东的海啸。商业世界就是这样难以预料。小的变化往往会带来巨大的效用。
 
-不让你提问题的宜家——
+**不让你提问题的宜家**
+
 宜家坚持“客户少提问”的原则，他们认为，客户如果需要问问题，那就是宜家服务的失败。因为根据客户满意度调查来看，那些问过问题的客户的满意度都偏低。所以，宜家会对这些“问题客户”调研，分析他们提出问题的原因以及宜家提供了哪些无效信息。
 
 于是，宜家尽可能把客户要提的问题都想到，比如“是不是手工编织”、“是不是使用童工”、“来自于哪座城市”“是不是十六世纪的设计风格”等描述。他们把这些信息全部展示出来，尽可能减少客户提问题的可能性。
@@ -230,7 +233,7 @@ tags: [管理，市场营销]
 
 宜家的客户满意度高，源于他们确保了每一名客户提过的问题不会被再问到，反观其他公司，他们做不到这一点。因此，身为企业的CEO，你的职责就是要找到能给公司带来“大成功”的“小细节”，然后不断地关注这些细节。
 
-损失厌恶——
+**损失厌恶**
 
 还有什么方法能帮你达成交易？那就是不要告诉他买了你的东西会得到什么，相反，要告诉他，如果不买你的东西会失去什么。人们“不愿意失去的意愿”比“想要得到的意愿”强烈得多。
 
@@ -266,7 +269,7 @@ tags: [管理，市场营销]
 
 如果你给他们看一幅画，你问他们好看吗，他们会怎么说？不知道。因为缺少参照物，他们要用一幅画的美感除以另一幅画的美感，才能得出自己的结论。拥有这些常识，在财务日常工作中是个好事，但财务工作之外，或许就不是好事了。
 
-关注真正的价值——
+**关注真正的价值**
 
 我曾给一家生产沥青的公司做咨询，他们的沥青价格是市场上普通沥青的2倍。这家公司的销售就遇到了一个难题，就是客户总要求他们证明产品质量也比其他产品好一倍！
 
