--- a/_posts/2018-11-04-309-marketing01.md
+++ b/_posts/2018-11-04-309-marketing01.md
@@ -231,19 +231,19 @@ tags: [管理，市场营销]
 
 ![](/uploads/2018/11/04-10.png)
 
-宜家的客户满意度高，源于他们确保了每一名客户提过的问题不会被再问到，反观其他公司，他们做不到这一点。因此，身为企业的CEO，你的职责就是要找到能给公司带来“大成功”的“小细节”，然后不断地关注这些细节。
+宜家的客户满意度高，源于他们确保了每一名客户提过的问题不会被再问到，反观其他公司，他们做不到这一点。因此，**身为企业的CEO，你的职责就是要找到能给公司带来“大成功”的“小细节”，然后不断地关注这些细节。**
 
 **损失厌恶**
 
-还有什么方法能帮你达成交易？那就是不要告诉他买了你的东西会得到什么，相反，要告诉他，如果不买你的东西会失去什么。人们“不愿意失去的意愿”比“想要得到的意愿”强烈得多。
+还有什么方法能帮你达成交易？那就是不要告诉他买了你的东西会得到什么，**相反，要告诉他，如果不买你的东西会失去什么。人们“不愿意失去的意愿”比“想要得到的意愿”强烈得多。**
 
 看看优秀的房屋销售人员怎样利用这个弱点来制服客户？
 
 上海有一家房地产公司，他们曾在康桥建造别墅，那时候卢浦大桥还未建成，交通不便，离上海市区很远。那时候（2013年左右），康桥别墅的价格在5000元/平方米左右，周边只有农田和蚊子。
 
-优秀的房屋销售人员做了一个宣传册，上面写着：
+**优秀的房屋销售人员做了一个宣传册，上面写着：**
 
-10年前，你因为某种原因放弃了拥有一套虹桥别墅的机会；5年前，你又没有抓住购买金桥别墅的机会；今天，你又有一次机会了，难道你还想再失去康桥别墅吗？
+**10年前，你因为某种原因放弃了拥有一套虹桥别墅的机会；5年前，你又没有抓住购买金桥别墅的机会；今天，你又有一次机会了，难道你还想再失去康桥别墅吗？**
 
 客户听了之后，立即决定在康桥买房子了。
 
@@ -251,13 +251,13 @@ tags: [管理，市场营销]
 
 ![](/uploads/2018/11/04-11.png)
 
-因此，告诉潜在客户如果他不买会失去什么，反而会大大提高客户转化率。
+因此，**告诉潜在客户如果他不买会失去什么，反而会大大提高客户转化率。**
 
-三、市场营销是基于各种常识的哲学
+**三、市场营销是基于各种常识的哲学**
 
-市场营销不仅是各种各样的知识，市场营销也是哲学，它是一种思维的方式。纵观那些失败的公司，其失败的关键因素就是缺少营销哲学，没有营销哲学，营销工作缺少了根基。
+**市场营销不仅是各种各样的知识，市场营销也是哲学，它是一种思维的方式。**纵观那些失败的公司，其失败的关键因素就是缺少营销哲学，没有营销哲学，营销工作缺少了根基。
 
-某种程度上，哲学就是一种常识。什么是常识？常识就是那些你没有意识到的，其实自己已经如此熟悉了的思维方式。人类的常识来源于教育和工作的背景。
+某种程度上，哲学就是一种常识。**什么是常识？常识就是那些你没有意识到的，其实自己已经如此熟悉了的思维方式。人类的常识来源于教育和工作的背景。**
 
 在美国和欧洲，会计出身的人往往不太可能成为CEO，会计专业的学生不会做决策，很多人将此归咎于会计专业的教学方法。
 
@@ -281,19 +281,19 @@ tags: [管理，市场营销]
 
 如果北京或者上海的一条隧道上有了一个洞，修补的成本要多少？
 
-你要封堵这条路，然后用水泥填满这个洞，铺平。这可能要耗费20个小时都不止。从这个角度看，一个洞带来的成本有多少？
+你要封堵这条路，然后用水泥填满这个洞，铺平。这可能要耗费20个小时都不止。**从这个角度看，一个洞带来的成本有多少？**
 
-隧道里的一个洞会导致交通堵塞，有百万辆汽车要多燃烧一个小时的汽油。路上的司机不停按喇叭，有五百辆以上的汽车需要更换新喇叭。还可能有人要赶着约会，等的焦急，心脏病突发，又撞了其他三辆车，于是整条路被封堵了。因为交通堵塞，飞行员无法按时到达机场，有20架以上的飞机要晚点。旧金山机场为此要为300多个人安排酒店房间，因为所有的转机航班都因飞行员缺位无法起飞。这就是马路上一个洞引发的连锁事件！这才是修补马路上这个洞需要的成本！
+**隧道里的一个洞会导致交通堵塞，有百万辆汽车要多燃烧一个小时的汽油。路上的司机不停按喇叭，有五百辆以上的汽车需要更换新喇叭。还可能有人要赶着约会，等的焦急，心脏病突发，又撞了其他三辆车，于是整条路被封堵了。因为交通堵塞，飞行员无法按时到达机场，有20架以上的飞机要晚点。旧金山机场为此要为300多个人安排酒店房间，因为所有的转机航班都因飞行员缺位无法起飞。这就是马路上一个洞引发的连锁事件！这才是修补马路上这个洞需要的成本！**
 
 沥青的成本仅仅是一条马路成本的2%，在隧道里可能连0.1%都不到。从财务角度讲，交通局的采购人员可以说产品质量与价格成正比，价格提高一倍，产品质量就要好一倍，是这样吗？不是的。
 
 江西省曾经发生过类似的事情。沥青公司直接去了当地市政府，和市长进行了沟通。市长的决定是用更贵的沥青，市长考虑的是经济社会的成本，是从全局的视角看待这件事情，而交通局用的是财务的逻辑。于是，江西省出台了这样一个政策，政府要求交通局务必购买价格高的沥青，否则要说明原因。
 
-因此，商品的价值与成本是无关的。比如你买一辆奔驰车，你一定希望用最好的喷漆，这个道理很简单。我们要用这个逻辑思考问题，多谈价值而非价格。
+**因此，商品的价值与成本是无关的。**比如你买一辆奔驰车，你一定希望用最好的喷漆，这个道理很简单。我们要用这个逻辑思考问题，**多谈价值而非价格。**
 
 ![](/uploads/2018/11/04-12.png)
 
-—市场营销是概率的科学—
+**市场营销是概率的科学**
 
 市场营销和会计学、金融学、工程学有着不同的常识。我给一些技术公司授课（如阿里巴巴、网易、vivo等）时，下面听课的都是工程师，这时往往需要更加小心。因为工程师的“常识”是不同的，他们会质疑你的观点，所以我会更认真地上课。 
 
@@ -309,7 +309,7 @@ tags: [管理，市场营销]
 
 然后问问题的那个工程师们就很开心，其他工程师也变得很兴奋，好像赢得了一场胜利。但我也没有表现得很难堪。
 
-我说：你说的没错，但我说的也没错。你们觉得你们胜利了，恰恰是因为你们不懂营销。营销不是那种绝对的科学，在物理学中，100厘米就是1米，很绝对。如果你能证明100厘米不等于1米，哪怕只有一次，你就能得诺贝尔奖。但市场营销中，例外处处都是，没什么绝对的！
+我说：你说的没错，但我说的也没错。你们觉得你们胜利了，恰恰是因为你们不懂营销。营销不是那种绝对的科学，在物理学中，100厘米就是1米，很绝对。如果你能证明100厘米不等于1米，哪怕只有一次，你就能得诺贝尔奖。**但市场营销中，例外处处都是，没什么绝对的！**
 
 这样的言论让工程们很紧张，他们害怕这种不确定性。他们会说：亏得你还是市场营销博士呢，真可笑。
 
@@ -325,17 +325,17 @@ tags: [管理，市场营销]
 
 市场营销经理和医生的工作是相似的，因为未知的东西总会比已知的要多。如果我们想有所作为，就要尝试给患者开处方，在尝试中获取知识，在尝试中取得成功。
 
-市场营销是动态的，要面临竞争对手、环境的变化。因此，营销工作是很难的。就像医生说，5个人吃了药4个人还会死掉，市场营销也会面临80%的新产品失败，80%的产品没有市场，70%的广告没有帮助提高营销成效。市场营销中，失败是常态。
+**市场营销是动态的，要面临竞争对手、环境的变化。**因此，营销工作是很难的。就像医生说，5个人吃了药4个人还会死掉，市场营销也会面临80%的新产品失败，80%的产品没有市场，70%的广告没有帮助提高营销成效。**市场营销中，失败是常态。**
 
 作为一名工程师，造5座大桥，4座垮了，一定要承担责任，要坐牢。市场营销中，你要成功造一座大桥，就要先造5座，因为4座都可能会倒。而且那一座即使现在没倒，明年可能就会倒。
 
-所以，市场营销的常识和工程师、会计所掌握的常识完全不同。如果工程师出错，那一定是错了。如果会计出错，那一定是前面计算错了。但市场营销中，即使你做对了，结果也可能是错的。因此，做事正确并不能保证成功，但会提高成功的概率。
+所以，市场营销的常识和工程师、会计所掌握的常识完全不同。如果工程师出错，那一定是错了。如果会计出错，那一定是前面计算错了。**但市场营销中，即使你做对了，结果也可能是错的。因此，做事正确并不能保证成功，但会提高成功的概率。**
 
 既然市场营销的结果不可预测，我们到底该做些什么呢？优秀的市场营销经理就像医生、就像赌徒。
 
 就像前面说的，招聘销售人员，我们让应聘者填写问卷。我们不招选择“鸟”的人，因为历史告诉我们，这类人的业绩不会很好。可能有人质疑我，还有一些选“鸟”的人，他们业绩很好啊？
 
-没错，但那是个例，我看的是概率。市场营销工作就是要“管理”好这些概率，而不是个例。
+没错，但那是个例，我看的是概率。**市场营销工作就是要“管理”好这些概率，而不是个例。**
 
 医生如此，赌博也是如此。你不知道对方手里的牌，也不知道桌上发的牌，唯一知道的就是自己手里的牌。你玩21点（一种纸牌游戏），你手上有18点了，还要不要继续拿牌？最好是别拿了，因为再来的牌如果是3点以上，你就爆掉了。就拿着手里的18点，赢钱的概率会大一些。
 
