--- a/_posts/2018-12-12-315-docker.md
+++ b/_posts/2018-12-12-315-docker.md
@@ -93,3 +93,10 @@ https://www.zhihu.com/question/48174633/answer/229253704
 *总结*
 
 在技术演进中，docker只是趋势，并不是结果。相信在未来，一定有更高大上的部署架构出现!
+
+# 参考
+
+[微服务为什么一定要用docker](https://mp.weixin.qq.com/s/vqAxTj0A45B76mDPPD3XPQ)
+
+[docker容器与虚拟机有什么区别？](https://www.zhihu.com/question/48174633)
+
