--- a/_posts/2018-12-12-317-wfw01.md
+++ b/_posts/2018-12-12-317-wfw01.md
@@ -23,7 +23,7 @@ tags: [微服务]
 
 讲完这些有关微服务的背景知识之后，现在就切入今天的正题，面对快速增长的业务需求，小公司如何进行微服务化改造？下面就以我在杏仁主导实施的微服务化改造的全过程为背景，给大家简单说一下我们微服务化改造的总体思路和核心中间件的技术选型过程。
 
-2. 项目背景
+# 项目背景
 
 首先介绍一下微服务化改造的背景。去年年初，在历经2年多的产品迭代之后，整个后台应用越来越庞大，已经成为一个典型意义上的 monolithic application：1. 各个业务模块犬牙交错，重复代码随处可见，补丁代码越打越多。2. 任何一个改动都需要一次全量发布，哪怕是修改一句文案，极大的拖慢了迭代速度。
 
@@ -39,7 +39,7 @@ tags: [微服务]
 
 ![](/uploads/2018/12/12-07.jpg)
 
-3. 基本框架
+# 基本框架
 
 基本框架我们选择的是 Spring Boot。Spring Boot 是 Spring开源社区提供的一个去容器、去XML配置的应用框架。和标准的基于 war 包的 Web 应用相比，Spring Boot 应用可以直接以 java -jar 的方式运行，也就是说不再需要部署到一个独立的 Web 容器（比如 Tomcat）中才能运行。其背后的运行机制简单来说就是，当一个 Spring Boot 应用启动时，在加载完核心框架类之后，会启动一个内嵌的 Web 容器（默认是 Tomcat），然后再加载应用本身的各种配置类和 Bean。也就是说不再是容器包应用，而是应用包容器。正是由于这个特性，Spring Boot 非常适用于开发微服务，毫不夸张的说 Spring Boot 就是为微服务而生。
 
