--- a/_posts/2018-12-14-319-lxc.md
+++ b/_posts/2018-12-14-319-lxc.md
@@ -18,3 +18,4 @@ tags: [LXC]
 
 [Linux namespace 简介 part 6 - USER](http://blog.lucode.net/linux/intro-Linux-namespace-6.html)
 
+[理解 chroot](https://www.ibm.com/developerworks/cn/linux/l-cn-chroot/)
