--- a/_posts/2018-12-17-320-docker01.md
+++ b/_posts/2018-12-17-320-docker01.md
@@ -5,7 +5,7 @@ pid: 320
 tags: [docker]
 ---
 
-1. 创业公司的技术挑战
+# 创业公司的技术挑战
 
 托尔斯泰说：“幸福的家庭都是相同的，不幸的家庭各有各的不幸。”互联网创业公司也一样。大部分互联网创业公司，都会碰到以下几个技术挑战。
 
@@ -17,7 +17,7 @@ tags: [docker]
 
 该系列文章会分为三篇。第一篇介绍容器化之前，杏仁技术架构的发展历史。第二篇介绍容器以及杏仁的容器化方案。第三篇最后总结为什么我们认为创业公司应该用容器，以及为什么容器可以帮助我们应对这三个挑战。
 
-2. 杏仁早期
+# 杏仁早期
 
 在 2012 年以前，大部分互联网公司包括创业公司，都是直接购买服务器，租用 IDC 机房的机架部署的。应用是直接运行在物理机上的，要扩展必须购买新服务器。IDC 经常出各种故障，如果碰到 IDC 迁移的话，就更痛苦，必须半夜搬机器，天亮前上线。总之对创业公司的成本、服务稳定性、工作效率都是有很大的消耗。
 
@@ -29,7 +29,7 @@ tags: [docker]
 
 很多人可能会好奇为什么选择 Scala／Play 进行开发，毕竟 Scala 在国内应该用的不多。这里一方面因为杏仁医生是继承了看处方的架构，当初看处方就是基于 Scala／Play 开发的， 团队对这一套方案比较熟悉。我们需要快速的构建杏仁医生，自然就会选择最熟悉的语言和框架。而且对于中小规模的应用，Scala／Play 的开发效率的确非常高。Scala 本身的表达能力非常强，是一门很有意思的语言。很多好学的工程师，也会对新的语言也会比较感兴趣。
 
-3. 应用拆分和CI／CD 
+# 应用拆分和CI／CD 
 
 经过一年多快速演进，整个应用越来越庞杂。所以我们对应用进行了拆分，并且随着业务扩张，应用也越来越多，例如 HIS、CRM 等。所以我们的架构变成了这个样子。
 
@@ -59,7 +59,7 @@ tags: [docker]
 
 ![](/uploads/2018/12/17-04.jpg)
 
-4. 微服务化
+# 微服务化
 
 系统多了，依赖复杂、数据没有隔离、逻辑重复，接下来一个必然的方向就是微服务。关于微服务，我们公众号有两篇文章（乐高式微服务化改造（上）、乐高式微服务化改造（下））对此有比较详细的分析说明，这里就简单介绍一下。
 
