--- a/_posts/2018-12-17-322-docker03.md
+++ b/_posts/2018-12-17-322-docker03.md
@@ -17,7 +17,7 @@ tags: [docker]
 
 很多大厂其实一、两年前就开始做容器方面的尝试。但现在，我们认为其实初创公司也应该考虑应用容器了，原因有以下几点。
 
-1. 容器生态已经成熟，容器服务和容器云可以大幅降低容器使用成本。
+# 容器生态已经成熟，容器服务和容器云可以大幅降低容器使用成本。
 
 去年容器编排还不能说很成熟，例如 Kubernetes 还存在不少缺陷。但经过一年时间狂飙猛进，Kubernetes 今年已经很成熟了，有不少企业已经在生产环境使用了 Kubernetes。部署和运维也比之前简单多了。
 
@@ -25,7 +25,7 @@ tags: [docker]
 
 并且这会带来一个额外的好处，因为这些容器服务都是基于 Kubernetes 的，而容器本身就是一个标准化的东西，使用容器服务反而可以降低对公有云服务的依赖。在公有云的容器服务之间迁移，或者后期打算自建然后迁移，都不是很难的事情，
 
-2. 容器使创业公司可以轻松的应用行业最佳实践，创建优质应用。
+# 容器使创业公司可以轻松的应用行业最佳实践，创建优质应用。
 
 几年前有人提出了一个十二要素应用的最佳实践，我认为是一个很好的标准。
 
@@ -57,7 +57,7 @@ tags: [docker]
 
 所以可以看到，在容器环境下，可以很轻松的实践这十二要素，从而使得应用更容易开发、维护和部署。
 
-3. 容器使创业公司一开始就可以以极低的成本应用微服务架构。
+# 容器使创业公司一开始就可以以极低的成本应用微服务架构。
 
 这张图很多人应该看到过，是 Martin Fowler 提出的关于微服务和单体应用的生产率趋势的比较。
 
@@ -79,7 +79,7 @@ tags: [docker]
 
 所以在容器环境下，我们没有理由再去创建一个单体应用，一切都是微服务，只要业务架构设计合理，研发团队可以更专注于业务开发，生产率可以一直保持在较高水平。
 
-4. 容器使创业公司降低运维成本，提升运维效率，轻松实践 Devops。
+# 容器使创业公司降低运维成本，提升运维效率，轻松实践 Devops。
 
 容器环境下，很多以前的日常操作都自动化或至少半自动化了，比如比如部署、发布新应用、扩容等等，都可以很快速的响应。容器编排的自愈能力，即使除了问题，也可减少人工干预。
 
