--- a/_posts/2018-12-18-325-iptables.md
+++ b/_posts/2018-12-18-325-iptables.md
@@ -90,6 +90,8 @@ Raw——mangle——nat——filter
 
 ![](/uploads/2018/12/18-03.jpg)
 
+![](/uploads/2018/12/18-04.jpg)
+
 # 文章参考
 
 1. http://netfilter.org/ iptables官方网站
